--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
 
 .world-box
 {
-  height: 50vw; 
+  height: 760px; 
   overflow-y: hidden
 }
 
@@ -120,11 +120,21 @@
 
 
 
-@media only screen and (max-device-width : 1100px) {
+@media only screen and (min-device-width : 1100px) {
 
   .world-box
 {
-  height: 75vw; 
+  height:  730px; 
+  overflow-y: hidden
+}
+
+}
+
+@media only screen and (min-device-width : 1400px) {
+
+  .world-box
+{
+  height:  760px; 
   overflow-y: hidden
 }
 
@@ -135,7 +145,7 @@
 
   .world-box
   {
-    height: 42vw; 
+    height: 780px; 
     overflow-y: hidden
   }
   .graph-box
@@ -150,7 +160,7 @@
 
   .world-box
   {
-    height: 30vw; 
+    height: 780px; 
     overflow-y: hidden
   }
   .graph-box
